--- a/style.css
+++ b/style.css
@@ -98,3 +98,45 @@ margin-left: 20px;
     align-items: center;
     gap: 10px;
 }
+#box_limite{
+display: flex;
+}
+#number{
+    padding: 10px;
+    background-color:  rgb(36, 41, 47);
+    border: 1px solid rgba(255, 255, 255, 0.11);
+    color: white;
+    font-weight: bold;
+    width: 70px;
+    height: 50px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#digt{
+    color: white;
+    height: auto;
+    width: 20px;
+    font-size: 15pt;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#sub,#sum{
+    padding: 10px;
+    background-color:  rgb(36, 41, 47);
+    border: 1px solid rgba(255, 255, 255, 0.11);
+    width: 50px;
+    height: 50px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+#sub:hover,#sum:hover{
+  font-size: 20pt;
+  font-weight: bold;
+}
