--- a/style.css
+++ b/style.css
@@ -20,6 +20,16 @@ body {
     border-radius: 5px;
     margin: 5px auto;
 }
+#plac_empt{
+    padding: 10px;
+    width: 35px;
+    height: auto;
+    border-radius: 5px;
+    margin: 5px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 #ganhador{
     display: flex;
     justify-content: center;
@@ -135,6 +145,7 @@ display: flex;
     align-items: center;
     margin-left: 15px;
     margin-right: 15px;
+    cursor: pointer;
 }
 #sub:hover,#sum:hover{
   font-size: 20pt;
