--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 #box_vencedor{
     padding: 10px;
-    width: 65px;
+    max-width: 135px;
     height: auto;
     border-radius: 5px;
     margin: 5px auto;
@@ -33,7 +33,6 @@ body {
 #ganhador{
     display: flex;
     justify-content: center;
-
 }
 
 #jogada {
