--- a/style.css
+++ b/style.css
@@ -6,12 +6,92 @@ body {
     justify-content: center;
     align-items: center;
 }
-
+.border-sup{
+    position:absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    padding: 50px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.137);
+    background-color: rgb(36, 41, 47);
+    width: auto;
+}
+#chk{
+    display: none;
+    
+    }
+    .switch{
+        position: absolute;
+        background-color: rgb(39, 38, 38);
+        width: 40px;
+        height: 20px;
+        border-radius: 20px;
+        display: flex;
+        align-items: center;
+        padding: 5px;
+        transition: all .5s ease-in-out;
+        cursor: pointer;
+        right: 0;
+        margin-right: 15px;
+        margin-top: -10px;
+    }
+    .slider{
+        position: absolute;
+        background-color: rgb(255, 253, 253);
+        border-radius: 50%;
+        width: 20px;
+        height: 20px;
+        transition: all .5s ease-in-out;
+    }
+    #chk:checked ~.switch{
+        background-color: rgb(217, 224, 223);
+    }
+    #chk:checked ~.switch .slider{
+        transform: translateX(20px);
+    }
+    .btn_home{
+    
+    width: 20px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    padding: 20px;
+    position: absolute;
+    border-radius: 10px;
+    left: 0;
+    margin-left: 15px;
+    margin-top: -25px;
+    
+    }
+    #home{
+        color: white;
+        font-size:20pt;
+        position: absolute;
+        margin-top: -10px;
+    }
+    .n_home{
+        margin:flex;
+        position: absolute;
+        text-align: center;
+        margin-top: 55px;
+        color: white;
+        font-size: 10pt;
+    }
+    .btn_home:hover #home{
+        font-size: 25pt;
+    }
+    .btn_home:hover .n_home{
+        margin-top: 60px;
+        font-size: 12pt;
+    }
 #placar {
     width:  300px;
     padding: 10px;
     background-color: rgb(36, 122, 156);
     border-radius: 20px;
+    margin-top: 115px;
 }
 #box_vencedor{
     padding: 10px;
@@ -47,7 +127,7 @@ body {
 #container {
     display: flex;
     justify-content: center;
-margin-left: 20px;
+    margin-left: 20px;
     
 }
 
